alignment classes fix

--- a/gutenberg/css/frontend-index.css
+++ b/gutenberg/css/frontend-index.css
@@ -1,32 +1,32 @@
 /*--------------------------------------------------------------
 # Alignments
 --------------------------------------------------------------*/
-.left {
+.alignleft {
 	display: flex;
   	justify-content: flex-start;
   	flex-wrap: wrap;
 }
 
-.right {
+.alignright {
 	display: flex;
   	justify-content: flex-end;
   	flex-wrap: wrap;
 }
 
-.center {
+.aligncenter {
 	display: flex;
   	justify-content: center;
   	flex-wrap: wrap;
 }
 
-.full {
+.alignfull {
 	max-width: 80%;
 	width: 80%;
 	display: block;
 	margin: 0 auto;
 }
 
-.wide {
+.alignwide {
 	width: 100%;
-	display: inline-block;
+	display: block;
 }
